--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,8 @@
-= Codility for Programmers: AVAILABLE LESSONS:
+= Codility for Programmers: 
 
 
 
-
+== https://github.com/sunilsoni/Codility-Practice/blob/master/src/com/codility/lessons/[AVAILABLE LESSONS:]
  
 
 == https://github.com/sunilsoni/Codility-Practice/blob/master/src/com/codility/lessons/BinaryGap[Solutions to Lesson 1: BinaryGap]
