--- a/README.adoc
+++ b/README.adoc
@@ -31,3 +31,93 @@ Complexity:
 expected worst-case time complexity is O(log(N));
 expected worst-case space complexity is O(1).
 
+== https://github.com/sunilsoni/Codility-Practice/tree/master/src/com/codility/lessons/Arrays[Solutions to Lesson 2: Arrays]
+
+* https://github.com/sunilsoni/Codility-Practice/blob/master/src/com/codility/lessons/Arrays/OddOccurrencesInArray.java[*Odd Occurrences In Array:*] Find value that occurs in odd number of elements.
+
+A non-empty zero-indexed array A consisting of N integers is given. The array contains an odd number of elements, and each element of the array can be paired with another element that has the same value, except for one element that is left unpaired.
+
+For example, in array A such that:
+[source,java]
+-----------------
+  A[0] = 9  A[1] = 3  A[2] = 9
+  A[3] = 3  A[4] = 9  A[5] = 7
+  A[6] = 9
+-----------------
+the elements at indexes 0 and 2 have value 9,
+the elements at indexes 1 and 3 have value 3,
+the elements at indexes 4 and 6 have value 9,
+the element at index 5 has value 7 and is unpaired.
+Write a function:
+
+class Solution { public int solution(int[] A); }
+
+that, given an array A consisting of N integers fulfilling the above conditions, returns the value of the unpaired element.
+
+For example, given array A such that:
+[source,java]
+-----------------
+  A[0] = 9  A[1] = 3  A[2] = 9
+  A[3] = 3  A[4] = 9  A[5] = 7
+  A[6] = 9
+-----------------
+the function should return 7, as explained in the example above.
+
+Assume that::
+
+N is an odd integer within the range [1..1,000,000];
+each element of array A is an integer within the range [1..1,000,000,000];
+all but one of the values in A occur an even number of times.
+Complexity:
+
+expected worst-case time complexity is O(N);
+expected worst-case space complexity is O(1), beyond input storage (not counting the storage required for input arguments).
+
+
+* https://github.com/sunilsoni/Codility-Practice/blob/master/src/com/codility/lessons/Arrays/CyclicRotation.java[*Cyclic Rotation:*] Rotate an array to the right by a given number of steps.
+A zero-indexed array A consisting of N integers is given. Rotation of the array means that each element is shifted right by one index, and the last element of the array is moved to the first place. For example, the rotation of array A = [3, 8, 9, 7, 6] is [6, 3, 8, 9, 7] (elements are shifted right by one index and 6 is moved to the first place).
+
+The goal is to rotate array A K times; that is, each element of A will be shifted to the right K times.
+
+Write a function:
+[source,java]
+-----------------
+class Solution { public int[] solution(int[] A, int K); }
+-----------------
+
+that, given a zero-indexed array A consisting of N integers and an integer K, returns the array A rotated K times.
+
+For example, given
+[source,java]
+-----------------
+    A = [3, 8, 9, 7, 6]
+    K = 3
+-----------------
+the function should return [9, 7, 6, 3, 8]. Three rotations were made:
+
+
+[source,java]
+-----------------
+    [3, 8, 9, 7, 6] -> [6, 3, 8, 9, 7]
+    [6, 3, 8, 9, 7] -> [7, 6, 3, 8, 9]
+    [7, 6, 3, 8, 9] -> [9, 7, 6, 3, 8]
+-----------------
+	For another example, given
+[source,java]
+-----------------
+    A = [0, 0, 0]
+    K = 1
+the function should return [0, 0, 0]
+-----------------
+Given
+[source,java]
+-----------------
+    A = [1, 2, 3, 4]
+    K = 4
+the function should return [1, 2, 3, 4]
+-----------------
+Assume that::
+
+N and K are integers within the range [0..100];
+each element of array A is an integer within the range [−1,000..1,000].
+In your solution, focus on correctness. The performance of your solution will not be the focus of the assessment.
