--- a/README.adoc
+++ b/README.adoc
@@ -49,9 +49,10 @@ the elements at indexes 1 and 3 have value 3,
 the elements at indexes 4 and 6 have value 9,
 the element at index 5 has value 7 and is unpaired.
 Write a function:
-
+[source,java]
+-----------------
 class Solution { public int solution(int[] A); }
-
+-----------------
 that, given an array A consisting of N integers fulfilling the above conditions, returns the value of the unpaired element.
 
 For example, given array A such that:
@@ -110,7 +111,7 @@ For another example, given
     K = 1
 the function should return [0, 0, 0]
 -----------------
-Given
+Given:
 [source,java]
 -----------------
     A = [1, 2, 3, 4]
