--- a/README.adoc
+++ b/README.adoc
@@ -302,10 +302,10 @@ Given array A such that:
     A[0] = 4
     A[1] = 1
     A[2] = 3
------------------ 
+-----------------
 the function should return 0.
 
-Assume that:
+Assume that:: 
 
 N is an integer within the range [1..100,000];
 each element of array A is an integer within the range [1..1,000,000,000].
