--- a/README.adoc
+++ b/README.adoc
@@ -313,3 +313,38 @@ Complexity:
 
 expected worst-case time complexity is O(N);
 expected worst-case space complexity is O(N), beyond input storage (not counting the storage required for input arguments).
+
+
+
+
+ == https://github.com/sunilsoni/Codility-Practice/tree/master/src/main/java/com/codility/lessons/Sorting[Solutions to Lesson 6: Sorting]
+
+* https://github.com/sunilsoni/Codility-Practice/blob/master/src/main/java/com/codility/lessons/Sorting/Distinct.java[*Distinct:*] Compute number of distinct values in an array.
+
+
+Write a function
+
+[source,java]
+-----------------
+class Solution { public int solution(int[] A); }
+-----------------
+
+that, given a zero-indexed array A consisting of N integers, returns the number of distinct values in array A.
+
+Assume that::
+
+N is an integer within the range [0..100,000];
+each element of array A is an integer within the range [−1,000,000..1,000,000].
+For example, given array A consisting of six elements such that:
+[source,java]
+-----------------
+ A[0] = 2    A[1] = 1    A[2] = 1
+ A[3] = 2    A[4] = 3    A[5] = 1
+-----------------
+the function should return 3, because there are 3 distinct values appearing in array A, namely 1, 2 and 3.
+
+Complexity:
+
+expected worst-case time complexity is O(N*log(N));
+expected worst-case space complexity is O(N), beyond input storage (not counting the storage required for input arguments).
+
