--- a/README.adoc
+++ b/README.adoc
@@ -489,3 +489,67 @@ Complexity:
 
 expected worst-case time complexity is O(N*log(N));
 expected worst-case space complexity is O(N), beyond input storage (not counting the storage required for input arguments).
+
+
+
+== https://github.com/sunilsoni/Codility-Practice/tree/master/src/main/java/com/codility/lessons/StacksQueues[Solutions to Lesson 7: Stacks and Queues]
+
+* https://github.com/sunilsoni/Codility-Practice/blob/master/src/main/java/com/codility/lessons/StacksQueues/Brackets.java[*Brackets:*] Determine whether a given string of parentheses (multiple types) is properly nested.
+
+A string S consisting of N characters is considered to be properly nested if any of the following conditions is true:
+
+S is empty;
+S has the form "(U)" or "[U]" or "{U}" where U is a properly nested string;
+S has the form "VW" where V and W are properly nested strings.
+For example, the string "{[()()]}" is properly nested but "([)()]" is not.
+
+Write a function:
+
+[source,java]
+-----------------
+class Solution { public int solution(String S); }
+-----------------
+
+that, given a string S consisting of N characters, returns 1 if S is properly nested and 0 otherwise.
+
+For example, given S = "{[()()]}", the function should return 1 and given S = "([)()]", the function should return 0, as explained above.
+
+Assume that::
+
+N is an integer within the range [0..200,000];
+string S consists only of the following characters: "(", "{", "[", "]", "}" and/or ")".
+
+Complexity::
+
+expected worst-case time complexity is O(N);
+expected worst-case space complexity is O(N) (not counting the storage required for input arguments).
+
+
+* https://github.com/sunilsoni/Codility-Practice/blob/master/src/main/java/com/codility/lessons/StacksQueues/Nesting.java[*Nesting:*] Determine whether a given string of parentheses (single type) is properly nested.
+
+A string S consisting of N characters is called properly nested if:
+
+S is empty;
+S has the form "(U)" where U is a properly nested string;
+S has the form "VW" where V and W are properly nested strings.
+For example, string "(()(())())" is properly nested but string "())" isn't.
+
+Write a function:
+[source,java]
+-----------------
+class Solution { public int solution(String S); }
+-----------------
+
+that, given a string S consisting of N characters, returns 1 if string S is properly nested and 0 otherwise.
+
+For example, given S = "(()(())())", the function should return 1 and given S = "())", the function should return 0, as explained above.
+
+Assume that::
+
+N is an integer within the range [0..1,000,000];
+string S consists only of the characters "(" and/or ")".
+
+Complexity::
+
+expected worst-case time complexity is O(N);
+expected worst-case space complexity is O(1) (not counting the storage required for input arguments).
